Contacts alignment fixed

--- a/home.css
+++ b/home.css
@@ -85,7 +85,7 @@ a[href^="mailto:"] {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: -35%;
+  margin-left: -15%;
 }
 
 .contacts ul {
